Updated tests