@@ -8,11 +8,14 @@
     <artifactId>avplatform-tests</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
+    <name>AVPlatform API Tests</name>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <serenity.version>1.0.47</serenity.version>
-        <serenity.maven.version>1.0.47</serenity.maven.version>
+        <serenity.version>1.6.1</serenity.version>
+        <serenity.maven.version>1.6.1</serenity.maven.version>
         <webdriver.driver>firefox</webdriver.driver>
+        <serenity.cucumber.version>1.1.6</serenity.cucumber.version>
     </properties>
 
     <dependencies>
@@ -47,7 +50,6 @@
             <artifactId>serenity-rest-assured</artifactId>
             <version>1.6.1</version>
         </dependency>
-
         <dependency>
             <groupId>com.github.scribejava</groupId>
             <artifactId>scribejava-apis</artifactId>
@@ -78,12 +80,6 @@
             <version>1.1.1</version>
         </dependency>
 
-        <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>2.8.0</version>
-        </dependency>
-
         <!-- added by me -->
         <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-core -->
         <dependency>
@@ -92,25 +88,42 @@
             <version>2.9.0</version>
         </dependency>
 
-    </dependencies>
-    <build>
-        <plugins>
+       </dependencies>
+       <build>
+
+         <plugins>
+          <!--  <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.18</version>
+                <configuration>
+                    <skip>false</skip>
+                </configuration>
+            </plugin>-->
             <plugin>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>2.18</version>
-                <configuration>
-                    <includes>
-                       <!-- <include>**/feature/**/When*.java</include> -->
-                        <include>**/serenityrestassured/*.java</include>
-                    </includes>
-                    <reuseForks>true</reuseForks>
 
-                    <systemProperties>
-                        <webdriver.driver>${webdriver.driver}</webdriver.driver>
-                        <!--            <surefire.rerunFailingTestsCount>${surefire.rerunFailingTestsCount}</surefire.rerunFailingTestsCount>
-                                    <surefire.rerunFailingTestsCount>${surefire.rerunFailingTestsCount}</surefire.rerunFailingTestsCount> -->
-                    </systemProperties>
+                <configuration>
+
+                <includes>
+                        <include>**/*.java</include>
+                    </includes>
+                    <forkCount>4</forkCount>
+                    <reuseForks>true</reuseForks>
+                <!--     <parallel>methods</parallel>  -->
+                    <threadCount>10</threadCount>
+               <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                 </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
+                        </goals>
+                    </execution>
+                </executions>
+
             </plugin>
             <plugin>
                 <groupId>net.serenity-bdd.maven.plugins</groupId>
@@ -119,7 +132,7 @@
                 <dependencies>
                     <dependency>
                         <groupId>net.serenity-bdd</groupId>
-                        <artifactId>core</artifactId>
+                        <artifactId>serenity-core</artifactId>
                         <version>${serenity.version}</version>
                     </dependency>
                 </dependencies>
